# chen_q3

./: .gitignore  20207bb1-a64c-4aa3-8706-c089daee9930-output.lean  2335edce-c8a6-42c0-97df-f049a3ea99cc-output.lean  23501312-86ca-4819-a85e-4f0065d9e1be-output.lean  4d5e7e81-e0e2-423b-a09f-60a6457f55c8-output.lean  56913dc1-5fee-4513-ac85-f55ab67289d5-output.lean  5e1c3901-5000-4465-aeb7-8b599ba504d3-output.lean  5ebc7c83-d781-4d89-a11c-d35560d039f2-output.lean  61d36c84-592a-4696-a282-7d4adefb19bd-output.lean  65aa8e2b-6193-45d1-85fa-f1f69e8c401b-output.lean  68f7963c_aristotle.lean  6cd52bc6_aristotle.lean  6df4dce0-7397-4303-b37e-f50d333ba384-output.lean  80b98262-50b9-40a8-8e48-7f8c5a6efce4-output.lean  850ffe5b-1d5c-4248-978d-ad911db7d9d0-output.lean  9f4a33c2_aristotle.lean  CLAUDE.md  LEAN_VERIFICATION_MASTER_old.md  PLAN_B1.md  PROOF_PLAN.md  PROOF_TASKS.md  README.md  STEP_B_PLAN.md  TODO_COMMUTATOR.md  TODO_code.md  TODO_math.md  TWINS_ANALYTICS_GAPS.md  WORKING_HYPOTHESES.md  c8b7778c-d7c1-41f8-98b7-e891a71af5c2-output.lean  d5bbc4ae-b978-4f29-ace4-e5c11eef9735-output.lean  dbfa2c26_aristotle.lean  e29f0ab7-b161-42cd-abe2-b57464affa6a-output.lean  e3ae346c_aristotle.lean  f758546b_aristotle.lean  f8cd9fb7-b136-4836-8ec3-27769f908664-output.lean  main.fdb_latexmk  main.fls  pyproject.toml
docs/: 2025-12-12 21-57-49-_________________________twins.md  2025-12-2 17-31-33-_____________________________.md  2025-12-6 16-24-11-__________________________.md  2025-12-7 5-43-18-Lower_bound__________.md  23659b1b-c03a-4348-ae09-2891edeee00b-output.lean  (+21 more)
full/: Makefile  (+22 more)
(+765 files in other folders)
